Menu mobile versão 2

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <nav class="desktop-menu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
                         <li><a href="cadastro.html">Cadastro</a></li>
                         <li><a href="login.html">Login</a></li>
                     </ul>
@@ -32,6 +33,7 @@
                     <i class="fa-solid fa-bars" id="menu"></i>
                     <ul class="itens-menu">
                         <li><a href="index.html">Home</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
                         <li><a href="cadastro.html">Cadastro</a></li>
                         <li><a href="login.html">Login</a></li>
                     </ul>
