--- a/cadastro.html
+++ b/cadastro.html
@@ -18,6 +18,7 @@
                 <nav class="desktop-menu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
                         <li><a href="cadastro.html">Cadastro</a></li>
                         <li><a href="login.html">Login</a></li>
                     </ul>
@@ -27,6 +28,7 @@
                     <i class="fa-solid fa-bars" id="menu"></i>
                     <ul class="itens-menu">
                         <li><a href="index.html">Home</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
                         <li><a href="cadastro.html">Cadastro</a></li>
                         <li><a href="login.html">Login</a></li>
                     </ul>
