Página Inicial finalizado v2 faltando footer

--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,7 @@
         <header>
             <div class="container">
                 <div class="logo">
-                    <img src="img/logo.svg" alt="logo">
+                    <img src="img/logo-pet-limpo-recortado.png" alt="logo">
                 </div>
                 <nav class="desktop-menu">
                     <ul>
@@ -25,12 +25,15 @@
                 </nav>
 
                 <nav class="mobile-menu">
-                    <i class="fa-solid fa-bars" id="menu"></i>
-                    <ul class="itens-menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#sobre">Sobre</a></li>
-                        <li><a href="cadastro.html">Cadastro</a></li>
-                        <li><a href="login.html">Login</a></li>
+                    <i class="fa-solid fa-bars menu" ></i>
+                    <ul class="itens-menu fechado">
+                        <i class="fa-solid fa-bars menu" id="menu-d"></i>
+                        <div class="wraper-ul">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="#sobre">Sobre</a></li>
+                            <li><a href="cadastro.html">Cadastro</a></li>
+                            <li><a href="login.html">Login</a></li>
+                        </div>
                     </ul>
                 </nav>
             </div>
