--- a/Agendamento.html
+++ b/Agendamento.html
@@ -13,6 +13,9 @@
 <body>
     <header>
         <div class="container">
+            <div class="logo">
+                <img src="img/logo-pet-limpo-recortado.png" alt="logo">
+            </div>
             <nav class="desktop-menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -20,14 +23,18 @@
             </nav>
 
             <nav class="mobile-menu">
-                <i class="fa-solid fa-bars" id="menu"></i>
-                <ul class="itens-menu">
-                    <li><a href="index.html">Home</a></li>
+                <i class="fa-solid fa-bars menu" ></i>
+                <ul class="itens-menu fechado">
+                    <i class="fa-solid fa-bars menu" id="menu-d"></i>
+                    <div class="wraper-ul">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
+                        <li><a href="cadastro.html">Cadastro</a></li>
+                        <li><a href="login.html">Login</a></li>
+                    </div>
                 </ul>
             </nav>
-            <div class="logo">
-                <img src="img/logo.svg" alt="logo">
-            </div>
+            
         </div>
     </header>
     
